Avoid small shift of the placeholder symbol when followed by caret. Also, tweak appearance of placeholder.

--- a/css/mathlive.less
+++ b/css/mathlive.less
@@ -1281,20 +1281,10 @@ div#ML__keyboard.material  {
 }
 
 .ML__placeholder {
-    padding-left: .12em;
-    padding-right: .12em;
-
-    &.ML__caret {
-        border: none;
-        border-radius: 0;
-        border-right: 2px solid @primary;
-        margin-right: -2px;
-        z-index: 1;
-        animation: blink 1.05s step-end forwards infinite;
-
-        padding-left: 0;
-        padding-right: 0;
-    }
+    padding-left: 1ex;
+    padding-right: 1ex;
+    font-size: 75%;
+    opacity: .7;
 }
 
 
